-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.13.2
-
None
-
-
6571bd51977ffe130c191a525ce94f9ff1d38a22 (qt-creator/qt-creator/master)
-
QDS 2D - 2021 - Weeks 9/11
In QmlDesignerPlugin::delayedInitialize() (src/plugins/qmldesigner/qmldesignerplugin.cpp:232), "qtcreator" is being hard-coded into the path. This path should be using QLatin1String(Core::Constants::IDE_ID)
For Gerrit Dashboard: QTCREATORBUG-24737 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
330745,3 | qmldesigner: do not use hardcoded path in plugin | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |