qmldesigner: do not use hardcoded path in plugin

Fixes: QTCREATORBUG-24737
Change-Id: I901b205bb6df7516d3cddf4cbc6d5a445ce2fb2f
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>